k8s-manifests/overlays/staging/kafka-startup-probe-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: tutum-data
spec:
  template:
    spec:
      containers:
        - name: kafka
          startupProbe:
            tcpSocket:
              port: 9092
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 120
