k8s-manifests/overlays/staging/private-general-nodepool-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: tutum-app
spec:
  template:
    spec:
      nodeSelector:
        $patch: replace
        eks.amazonaws.com/nodeclass: private-only
        karpenter.sh/nodepool: private-general
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tutum-app
spec:
  template:
    spec:
      nodeSelector:
        $patch: replace
        eks.amazonaws.com/nodeclass: private-only
        karpenter.sh/nodepool: private-general
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-exporter
  namespace: tutum-data
spec:
  template:
    spec:
      nodeSelector:
        $patch: replace
        eks.amazonaws.com/nodeclass: private-only
        karpenter.sh/nodepool: private-general
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: tutum-data
spec:
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
    spec:
      nodeSelector:
        $patch: replace
        eks.amazonaws.com/nodeclass: private-only
        karpenter.sh/nodepool: private-general
