k8s-manifests/overlays/staging/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: tutum-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tutum-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-producer
  namespace: tutum-app
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-consumer
  namespace: tutum-app
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-worker
  namespace: tutum-app
spec:
  replicas: 1
