k8s-manifests/overlays/staging/sonar-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-external
  namespace: tutum-app
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sonarqube-external
  namespace: tutum-app
subsets:
  - addresses:
      - ip: "10.60.11.95"
    ports:
      - name: http
        port: 9000
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  namespace: tutum-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:903913341620:certificate/cc8731ed-bd74-4ea4-a07b-897b6fbac78d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-northeast-2:903913341620:regional/webacl/tutum-stg-waf/14db8c23-c2dc-4d17-9f85-4b509bf4c261
    alb.ingress.kubernetes.io/group.name: tutum-stg
    alb.ingress.kubernetes.io/healthcheck-path: /api/system/status
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  ingressClassName: alb
  rules:
    - host: sonar.tutum.my
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-external
                port:
                  number: 9000
